set minimum width and height to 800x600 to prevent very low resolution from breaking all layout, by forcing scroll rather than cramped fit
git-svn-id: svn+ssh://svn.code.sf.net/p/migrid/code/trunk@3257 b75ad72c-e7d7-11dd-a971-7dbc132099af

--- a/mig/images/default.css
+++ b/mig/images/default.css
@@ -35,6 +35,9 @@ body {
   margin: 0;
   padding: 0;
   font-size: 13px;
+  /* prevent very low res from breaking all layout */
+  min-width: 800px;
+  min-height: 600px;
 }
 
 a {
